...
              }),

              const SizedBox(height: 8),
              OutlinedButton.icon(
                onPressed: () => _showPrintBedModal(context, null),
                icon: const Icon(Icons.add_box),
                label: const Text('Agregar Cama de Impresión'),
                style: OutlinedButton.styleFrom(
                  minimumSize: const Size.fromHeight(45),
                ),
              ),
              const Divider(),

...
                  color: Colors.black38,
                  borderRadius: BorderRadius.circular(12),
                  border: Border.all(color: Theme.of(context).colorScheme.primary.withOpacity(0.5)),
                ),
                child: Column(
                  children: [
                    _buildCostRow('Costo Materiales:', getMaterialsCost()),
                    _buildCostRow('Consumo Eléctrico:', getElectricityCost()),
                    _buildCostRow(
                      'Depreciación Máquinas:',
                      getDepreciationCost(),
                    ),
                    _buildCostRow(
                      '${appState.translate('preparation')} + ${appState.translate('post_processing')}:',
                      getLaborCost(),
                    ),
...
