...
                    color: Theme.of(context).colorScheme.primary,
                  ),
                ),
                TextButton.icon(
                  onPressed: () => _showPieceSubModal(context, null),
                  icon: const Icon(Icons.add, size: 16),
                  label: const Text('Añadir Objeto'),
                ),
              ],
            ),
            if (tempPieces.isEmpty)
              const Padding(
                padding: EdgeInsets.symmetric(vertical: 8.0),
...
